# Computer-Vision-Lab

./: .gitignore  README.md
Lab1/: CMakeLists.txt
Lab1/include/: mouse_callback.h
Lab1/src/: main.cpp  mouse_callback.cpp
Lab2/: CMakeLists.txt  lab2_report.odt
Lab2/src/: main.cpp
Lab3/: CMakeLists.txt  lab3_report.odt
Lab3/src/: filter.cpp  filter.h  main.cpp  mainCopy.cpp  show_histogram_function.cpp
Lab4/: CMakeLists.txt
Lab4/src/: main.cpp
Lab5/: CMakeLists.txt  report.odt
Lab5/include/: panoramic_utils.h
Lab5/src/: main.cpp  panoramic_image.h
Lab6/: CMakeLists.txt  report
Lab6/src/: main.cpp
